fixed stayloader styles on mobile

--- a/src/app/cmps/stay-preview-loader/stay-preview-loader.component.scss
+++ b/src/app/cmps/stay-preview-loader/stay-preview-loader.component.scss
@@ -57,4 +57,10 @@
       }
     }
   }
+  @include for-mobile-layout {
+    width: 100%;
+    .img-loader {
+      min-height: 20em;
+    }
+  }
 }
